# Parquet_cli

./: cargo.toml  pyproject.toml  readme.md
Screenshots/: cargo_build
sample_data/small_files/: small_file_001.parquet  small_file_002.parquet  small_file_003.parquet  small_file_004.parquet  small_file_005.parquet  small_file_006.parquet  small_file_007.parquet  small_file_008.parquet  small_file_009.parquet  small_file_010.parquet  small_file_011.parquet  small_file_012.parquet  small_file_013.parquet  small_file_014.parquet  small_file_015.parquet  small_file_016.parquet  small_file_017.parquet  small_file_018.parquet  small_file_019.parquet  small_file_020.parquet  small_file_021.parquet  small_file_022.parquet  small_file_023.parquet  small_file_024.parquet  small_file_025.parquet  small_file_026.parquet  small_file_027.parquet  small_file_028.parquet  small_file_029.parquet  small_file_030.parquet  small_file_031.parquet  small_file_032.parquet  small_file_033.parquet  small_file_034.parquet  small_file_035.parquet  small_file_036.parquet  small_file_037.parquet  small_file_038.parquet  small_file_039.parquet  small_file_040.parquet  (+60 more)
scripts/: generate_sample_data.py
src/: cli.rs  compactor.rs  config.rs  file_utils.rs  lib.rs  main.rs  report.rs
src/parquet_compactor_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pcompact/: __init__.py  cli.py  compactor.py  config.py  file_utils.py  report.py
tests/: file_utils_test.rs  test_compacter.py  test_file_utils.py
