[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parquet-compactor-cli"
version = "0.1.0"
description = "A beginner-friendly CLI tool to compact small Parquet files into larger optimized files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=15.0.0",
    "typer[all]>=0.12.0"
]

[project.scripts]
pcompact = "pcompact.cli:cli_entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
